--- a/package.json
+++ b/package.json
@@ -4,9 +4,20 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "start": "nodemon api.js"
+  },
+  "dependencies": {
+    "body-parser": "1.20.3",    
+    "cors": "2.8.5",              
+    "express": "4.21.2",           
+    "mssql": "11.0.1"
+  },
+  "devDependencies": {
+    "nodemon": "3.1.9"
   },
   "keywords": [],
-  "author": "",
+  "author": "Rajnandini Tiwari <rajnandini.tiwari.dev@gmail.com> ",
   "license": "ISC"
 }
+ 
