--- a/package.json
+++ b/package.json
@@ -8,10 +8,11 @@
     "start": "nodemon api.js"
   },
   "dependencies": {
-    "body-parser": "1.20.3",    
-    "cors": "2.8.5",              
-    "express": "4.21.2",           
-    "mssql": "11.0.1"
+    "body-parser": "1.20.3",
+    "cors": "2.8.5",
+    "express": "4.21.2",
+    "mssql": "11.0.1",
+    "tedious": "^18.6.1"
   },
   "devDependencies": {
     "nodemon": "3.1.9"
@@ -20,4 +21,3 @@
   "author": "Rajnandini Tiwari <rajnandini.tiwari.dev@gmail.com> ",
   "license": "ISC"
 }
- 
